--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -104,7 +104,7 @@ jobs:
           name: CSPBot2.0
           path: D:/out/BuildConfig
 
-      - name: Upload Main
+      - name: Upload PDB
         uses: actions/upload-artifact@v1.0.0
         with:
           name: PDB
