--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -120,7 +120,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          name: CSPBot Release ${{env.RELEASE_TAG}}
+          name: v${{env.RELEASE_TAG}}
           body_path: ./CHANGELOG.md
           files: |
             D:/out/zip/CSPBot-${{ steps.vars.outputs.sha_short }}.zip
