--- a/CSPBot2.0.vcxproj.filters
+++ b/CSPBot2.0.vcxproj.filters
@@ -48,12 +48,6 @@
     <Filter Include="Source File\fmt">
       <UniqueIdentifier>{a15b70c3-57aa-48b8-8589-9b754a7f092e}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header File\lua">
-      <UniqueIdentifier>{e87b3d61-643c-4106-92e1-e814e58d1c7d}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source File\lua">
-      <UniqueIdentifier>{f2fe801f-79cf-49b1-9565-adb19529ed07}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Header File\yaml-cpp">
       <UniqueIdentifier>{cc6fb4cc-99c0-4b9a-93de-d2b7e7fda3c3}</UniqueIdentifier>
     </Filter>
@@ -88,108 +82,6 @@
     </ClCompile>
     <ClCompile Include="src\debug.cpp">
       <Filter>Source File\System</Filter>
-    </ClCompile>
-    <ClCompile Include="src\fmt\format.cc">
-      <Filter>Source File\fmt</Filter>
-    </ClCompile>
-    <ClCompile Include="src\fmt\os.cc">
-      <Filter>Source File\fmt</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lapi.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lauxlib.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lbaselib.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lcode.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lcorolib.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lctype.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\ldblib.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\ldebug.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\ldo.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\ldump.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lfunc.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lgc.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\linit.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\liolib.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\llex.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lmathlib.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lmem.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\loadlib.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lobject.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lopcodes.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\loslib.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lparser.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lstate.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lstring.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lstrlib.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\ltable.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\ltablib.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\ltm.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lundump.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lutf8lib.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lvm.c">
-      <Filter>Source File\lua</Filter>
-    </ClCompile>
-    <ClCompile Include="src\lua\lzio.c">
-      <Filter>Source File\lua</Filter>
     </ClCompile>
     <ClCompile Include="src\yaml-cpp\binary.cpp">
       <Filter>Source File\yaml-cpp</Filter>
@@ -302,6 +194,12 @@
     <ClCompile Include="src\WebSocketClient.cpp">
       <Filter>Source File</Filter>
     </ClCompile>
+    <ClCompile Include="src\fmt\format.cc">
+      <Filter>Source File</Filter>
+    </ClCompile>
+    <ClCompile Include="src\fmt\os.cc">
+      <Filter>Source File</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\CSPBot2.0.rc">
@@ -348,90 +246,6 @@
     </ClInclude>
     <ClInclude Include="src\plugins.h">
       <Filter>Header File\Plugins</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lapi.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lauxlib.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lcode.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lctype.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\ldebug.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\ldo.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lfunc.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lgc.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\ljumptab.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\llex.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\llimits.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lmem.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lobject.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lopcodes.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lopnames.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lparser.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lprefix.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lstate.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lstring.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\ltable.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\ltm.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lua.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lua.hpp">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\luaconf.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lualib.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lundump.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lvm.h">
-      <Filter>Header File\lua</Filter>
-    </ClInclude>
-    <ClInclude Include="src\lua\lzio.h">
-      <Filter>Header File\lua</Filter>
     </ClInclude>
     <ClInclude Include="src\yaml-cpp\collectionstack.h">
       <Filter>Header File\yaml-cpp</Filter>
