--- a/CSPBot2.0.vcxproj
+++ b/CSPBot2.0.vcxproj
@@ -32,7 +32,7 @@
   </ImportGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="QtSettings">
     <QtInstall>6.3.1_msvc2019_64</QtInstall>
-    <QtModules>core;network;gui;widgets</QtModules>
+    <QtModules>core;gui;network;qml;widgets</QtModules>
     <QtBuildConfig>debug</QtBuildConfig>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'" Label="QtSettings">
@@ -64,7 +64,7 @@
     <ClCompile>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>$(Qt_DEFINES_);%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>$(Qt_DEFINES_);%(PreprocessorDefinitions);CSPBot_EXPORTS;</PreprocessorDefinitions>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
       <ExceptionHandling>Sync</ExceptionHandling>
     </ClCompile>
@@ -73,7 +73,7 @@
     <ClCompile>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>$(Qt_DEFINES_);%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>$(Qt_DEFINES_);%(PreprocessorDefinitions);CSPBot_EXPORTS;</PreprocessorDefinitions>
       <DisableSpecificWarnings>4996</DisableSpecificWarnings>
       <ExceptionHandling>Sync</ExceptionHandling>
     </ClCompile>
@@ -112,7 +112,8 @@
     <ClCompile Include="src\event.cpp" />
     <ClCompile Include="src\message_box.cpp" />
     <ClCompile Include="src\mysysinfo.cpp" />
-    <ClCompile Include="src\plugins.cpp" />
+    <ClCompile Include="src\pluginsApi.cpp" />
+    <ClCompile Include="src\pluginManager.cpp" />
     <ClCompile Include="src\regular_edit.cpp" />
     <ClCompile Include="src\server.cpp" />
     <ClCompile Include="src\WebSocketClient.cpp" />
@@ -169,7 +170,8 @@
     <ClInclude Include="src\helper.h" />
     <ClInclude Include="src\message_box.h" />
     <QtMoc Include="src\mysysinfo.h" />
-    <ClInclude Include="src\plugins.h" />
+    <ClInclude Include="src\pluginManager.h" />
+    <ClInclude Include="src\plugin.h" />
     <ClInclude Include="src\stdafx.h" />
     <ClInclude Include="src\version.h" />
     <ClInclude Include="src\yaml-cpp\collectionstack.h" />
