--- a/CSPBot2.0.vcxproj.filters
+++ b/CSPBot2.0.vcxproj.filters
@@ -74,7 +74,7 @@
     <ClCompile Include="src\main.cpp">
       <Filter>Source File\System</Filter>
     </ClCompile>
-    <ClCompile Include="src\plugins.cpp">
+    <ClCompile Include="src\pluginsApi.cpp">
       <Filter>Source File\Plugins</Filter>
     </ClCompile>
     <ClCompile Include="src\command.cpp">
@@ -200,6 +200,9 @@
     <ClCompile Include="src\fmt\os.cc">
       <Filter>Source File\fmt</Filter>
     </ClCompile>
+    <ClCompile Include="src\pluginManager.cpp">
+      <Filter>Source File\Plugins</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="res\CSPBot2.0.rc">
@@ -242,9 +245,6 @@
       <Filter>Header File\Tools</Filter>
     </ClInclude>
     <ClInclude Include="src\event.h">
-      <Filter>Header File\Plugins</Filter>
-    </ClInclude>
-    <ClInclude Include="src\plugins.h">
       <Filter>Header File\Plugins</Filter>
     </ClInclude>
     <ClInclude Include="src\yaml-cpp\collectionstack.h">
@@ -318,6 +318,12 @@
     </ClInclude>
     <ClInclude Include="include\magic_enum.hpp">
       <Filter>Header File</Filter>
+    </ClInclude>
+    <ClInclude Include="src\pluginManager.h">
+      <Filter>Header File\Plugins</Filter>
+    </ClInclude>
+    <ClInclude Include="src\plugin.h">
+      <Filter>Header File\Plugins</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
