--- a/CSPBot2.0.vcxproj
+++ b/CSPBot2.0.vcxproj
@@ -32,12 +32,12 @@
   </ImportGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="QtSettings">
     <QtInstall>6.3.1_msvc2019_64</QtInstall>
-    <QtModules>core;gui;network;qml;widgets</QtModules>
+    <QtModules>core;gui;network;widgets</QtModules>
     <QtBuildConfig>debug</QtBuildConfig>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'" Label="QtSettings">
     <QtInstall>6.3.1_msvc2019_64</QtInstall>
-    <QtModules>core;network;gui;widgets</QtModules>
+    <QtModules>core;gui;network;widgets</QtModules>
     <QtBuildConfig>release</QtBuildConfig>
   </PropertyGroup>
   <Target Name="QtMsBuildNotFound" BeforeTargets="CustomBuild;ClCompile" Condition="!Exists('$(QtMsBuild)\qt.targets') or !Exists('$(QtMsBuild)\qt.props')">
@@ -64,18 +64,20 @@
     <ClCompile>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>$(Qt_DEFINES_);%(PreprocessorDefinitions);CSPBot_EXPORTS;</PreprocessorDefinitions>
-      <DisableSpecificWarnings>4996;4828;%(DisableSpecificWarnings)</DisableSpecificWarnings>
+      <PreprocessorDefinitions>$(Qt_DEFINES_);%(PreprocessorDefinitions);CSPBot_EXPORTS;_AMD64_</PreprocessorDefinitions>
+      <DisableSpecificWarnings>4996;4828</DisableSpecificWarnings>
       <ExceptionHandling>Sync</ExceptionHandling>
+      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
       <LanguageStandard>stdcpp17</LanguageStandard>
       <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>$(Qt_DEFINES_);%(PreprocessorDefinitions);CSPBot_EXPORTS;</PreprocessorDefinitions>
+      <PreprocessorDefinitions>$(Qt_DEFINES_);%(PreprocessorDefinitions);CSPBot_EXPORTS;_AMD64_</PreprocessorDefinitions>
       <DisableSpecificWarnings>4996;4828</DisableSpecificWarnings>
       <ExceptionHandling>Sync</ExceptionHandling>
+      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="Configuration">
@@ -112,8 +114,8 @@
     <ClCompile Include="src\event.cpp" />
     <ClCompile Include="src\message_box.cpp" />
     <ClCompile Include="src\mysysinfo.cpp" />
-    <ClCompile Include="src\pluginsApi.cpp" />
-    <ClCompile Include="src\pluginManager.cpp" />
+    <ClCompile Include="src\plugins_api.cpp" />
+    <ClCompile Include="src\plugin_manager.cpp" />
     <ClCompile Include="src\regular_edit.cpp" />
     <ClCompile Include="src\server.cpp" />
     <ClCompile Include="src\WebSocketClient.cpp" />
@@ -164,14 +166,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\magic_enum.hpp" />
-    <ClInclude Include="pluginInfo.h" />
     <ClInclude Include="src\event.h" />
     <ClInclude Include="src\framework.h" />
     <ClInclude Include="src\global.h" />
     <ClInclude Include="src\helper.h" />
     <ClInclude Include="src\message_box.h" />
     <QtMoc Include="src\mysysinfo.h" />
-    <ClInclude Include="src\pluginManager.h" />
+    <ClInclude Include="src\plugin_manager.h" />
     <ClInclude Include="src\plugin.h" />
     <ClInclude Include="src\stdafx.h" />
     <ClInclude Include="src\version.h" />
